--- a/Pos_System/Views/Shared/_RightView.cshtml
+++ b/Pos_System/Views/Shared/_RightView.cshtml
@@ -1,2 +1,17 @@
-﻿
+﻿@model Pos_System.ViewModel.SubViewModel2
+
 <h1>Right View</h1>
+
+@foreach (var x in Model.Categories)
+{
+    <p>@x.CategoryName</p>
+}
+
+
+
+<h1>Hello :)</h1>
+
+
+
+
+
