Adding Authentication using identity

--- a/Pos_System/Views/Shared/_RightView.cshtml
+++ b/Pos_System/Views/Shared/_RightView.cshtml
@@ -8,8 +8,14 @@
 }
 
 
+<div class="col-md-12">
+    <input class="col-md-10" type="text"/>
+    <button id="b1" type="submit" value="Search"> Search </button>
+</div>
 
-<h1>Hello :)</h1>
+<!--Partial View for Products-->
+@*@{Html.RenderAction("RightViewProducts", Model.Products)}*@
+
 
 
 
