Left View Update

--- a/Pos_System/Content/Site.css
+++ b/Pos_System/Content/Site.css
@@ -67,3 +67,12 @@ textarea {
             flex-wrap: wrap;
         }
 
+        .btnContainer
+        {
+            justify-content:space-evenly;
+            
+            display:flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
