--- a/Pos_System/Views/Product/Index.cshtml
+++ b/Pos_System/Views/Product/Index.cshtml
@@ -20,7 +20,41 @@
         @{ Html.RenderAction("RightView", Model.SubViewModel2);}
     </div>
 
-</div>
+
+    <!-- Small modal -->
+    @*<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
+
+        <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+            <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                    ...
+                </div>
+            </div>
+        </div>*@
+    <button type="button" name="btnLink" id="btnLink">Open Pop</button>
+
+    <div id="posmodal" style="display:none">
+        <div class="modal fade" id="ModalPopUp" role="dialog">
+            <div class="modal-dialog err-pop" style="">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button id="DivClose" type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body" style="text-align:center;">
+                        Put Your Html Element Here
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    @*<script>
+        $("#btnLink").click(function () {
+            $('#ModalPopUp').modal('show');
+        })
+
+    </script>*@
 
 
 
